Use GIR to improve VImage docs (#87)